@@ -39,7 +39,7 @@ public abstract class CommandTest<T extends Command> {
         ParameterizedType type = (ParameterizedType) getClass().getGenericSuperclass();
         Class cls = (Class) type.getActualTypeArguments()[0];
         try {
-            command = (T) cls.newInstance();
+            command = (T) cls.getDeclaredConstructor().newInstance();
             command.simulator = simulator;
         } catch (Exception e) {
             throw new SystemException(e);
